--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>24</maven.compiler.release>
+		<maven.compiler.source>24</maven.compiler.source>
+		<maven.compiler.target>24</maven.compiler.target>
+		<java.version>24</java.version>
     </properties>
     
     <name>${project.groupId}:${project.artifactId}</name>
@@ -19,18 +22,23 @@
 
     <build>
        <plugins>
-          <plugin>
-             <groupId>org.apache.maven.plugins</groupId>
-             <artifactId>maven-compiler-plugin</artifactId>
-          </plugin>
-          <plugin>
-             <groupId>org.apache.maven.plugins</groupId>
-             <artifactId>maven-resources-plugin</artifactId>
-             <version>2.5</version>
-             <configuration>
-                <encoding>UTF-8</encoding>
-             </configuration>
-          </plugin>
+			<plugin>
+			   <groupId>org.apache.maven.plugins</groupId>
+			   <artifactId>maven-compiler-plugin</artifactId>
+			   <version>3.14.0</version>
+			   <configuration>
+				   <source>24</source>
+				   <target>24</target>
+			   </configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
        </plugins>
     </build>
 </project>
